infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flaskapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
