infra/code-template-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: flask-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-deployment
                port:
                  number: 5000
